[package]
name = "rss_notifications"
version = "0.1.0"
authors = ["Mev Lyshkin <mev_lyshkin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
feed-rs = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "^0.4.19"
open = "1"
dirs = "3.0"
confy = {url="https://github.com/rust-cli/confy"}
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0.64"
clap = "2.33.3"